<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="Preferences">

    <!--<Preference-->
        <!--android:title="Topic Settings"-->
        <!--android:enabled="false"-->
        <!--android:selectable="false"/>-->

    <!-- Separate screen for topics -->
    <PreferenceScreen
        android:icon="@drawable/ic_action_labels"
        android:title="@string/topic_pref_title"
        android:summary="@string/topic_pref_summary">

        <!--<Preference-->
            <!--android:title="Topic Names"-->
            <!--android:enabled="false"-->
            <!--android:selectable="false"/>-->

        <EditTextPreference
            android:key="@string/prefs_joystick_topic_edittext_key"
            android:defaultValue="@string/joy_topic"
            android:title="@string/joy_pref_title"
            android:singleLine="true"
            android:summary="@string/joy_pref_summary"
            />

        <EditTextPreference
            android:key="@string/prefs_laserscan_topic_edittext_key"
            android:defaultValue="@string/laser_scan_topic"
            android:title="@string/laser_pref_title"
            android:singleLine="true"
            android:summary="@string/laser_pref_summary"
            />

        <EditTextPreference
            android:key="@string/prefs_camera_topic_edittext_key"
            android:defaultValue="@string/camera_topic"
            android:title="@string/camera_pref_title"
            android:singleLine="true"
            android:summary="@string/camera_pref_summary"
            />

        <EditTextPreference
            android:key="@string/prefs_navsat_topic_edittext_key"
            android:defaultValue="@string/navsat_topic"
            android:title="@string/navsat_pref_title"
            android:singleLine="true"
            android:summary="@string/navsat_pref_summary"
            />

        <EditTextPreference
            android:key="@string/prefs_odometry_topic_edittext_key"
            android:defaultValue="@string/odometry_topic"
            android:title="@string/odometry_pref_title"
            android:singleLine="true"
            android:summary="@string/odometry_pref_summary"
            />

        <EditTextPreference
            android:key="@string/prefs_pose_topic_edittext_key"
            android:defaultValue="@string/pose_topic"
            android:title="@string/pose_pref_title"
            android:singleLine="true"
        android:summary="@string/pose_pref_summary"/>

    </PreferenceScreen>

    <!--<Preference-->
        <!--android:title="Warning System Settings"-->
        <!--android:enabled="false"-->
        <!--android:selectable="false"/>-->

    <!-- For enabling/disabling the warning system -->
    <SwitchPreference
        android:key="@string/prefs_warning_checkbox_key"
        android:checked="true"
        android:defaultValue="true"
        android:title="@string/warning_enable_pref_title"
        android:summaryOff="@string/warning_enable_pref_summary_off"
        android:summaryOn="@string/warning_enable_pref_summary_on"
        />

    <!-- Separate screen for warning system TODO find better icon -->
    <PreferenceScreen
        android:dependency="@string/prefs_warning_checkbox_key"
        android:key="@string/prefs_warning_system_key"
        android:icon="@drawable/ic_action_cloud"
        android:title="@string/warning_pref_title"
        android:summary="@string/warning_pref_summary">

        <!--<Preference-->
            <!--android:title="Options"-->
            <!--android:enabled="false"-->
            <!--android:selectable="false"/>-->

        <SwitchPreference
            android:key="@string/prefs_warning_safemode_key"
            android:title="@string/warning_safemode_pref_title"
            android:summaryOff="@string/warning_safemode_pref_summary_off"
            android:summaryOn="@string/warning_safemode_pref_summary_on"
            android:defaultValue="true"
            android:checked="true" />

        <SwitchPreference
            android:key="@string/prefs_warning_beep_key"
            android:title="@string/warning_beep_pref_title"
            android:summaryOff="@string/warning_beep_pref_summary_off"
            android:summaryOn="@string/warning_beep_pref_summary_on"
            android:defaultValue="true"
            android:checked="true" />

        <!--<Preference-->
            <!--android:title="Settings"-->
            <!--android:enabled="false"-->
            <!--android:selectable="false"/>-->

        <EditTextPreference
            android:key="@string/prefs_warning_mindist_key"
            android:inputType="numberDecimal"
            android:defaultValue="@string/default_warning_mindist"
            android:title="@string/warning_mindist_pref_title"
            android:singleLine="true"
            android:summary="@string/warning_mindist_pref_summary"/>

        </PreferenceScreen>

    <!--<Preference-->
        <!--android:title="Other Settings"-->
        <!--android:enabled="false"-->
        <!--android:selectable="false"/>-->

    <EditTextPreference
        android:key="edittext_laser_scan_detail"
        android:inputType="number"
        android:defaultValue="1"
        android:title="@string/laser_scan_detail_pref_title"
        android:singleLine="true"
        android:summary="@string/laser_scan_detail_pref_summary"/>

    <EditTextPreference
        android:key="edittext_random_walk_range_proximity"
        android:inputType="numberDecimal"
        android:defaultValue="2.0"
        android:title="@string/random_walk_range_minimum_pref_title"
        android:singleLine="true"
        android:summary="@string/random_walk_range_minimum_pref_summary"/>
</PreferenceScreen>