<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@android:color/darker_gray"
    android:alpha="0.65"
    tools:context="com.robotca.ControlApp.Fragments.HUDFragment">

    <TextView
        android:id="@+id/hud_speed"
        android:paddingLeft="16sp"
        android:paddingStart="16sp"
        android:paddingEnd="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/speed_string"/>

    <TextView
        android:id="@+id/hud_turnrate"
        android:layout_toRightOf="@id/hud_speed"
        android:layout_toEndOf="@id/hud_speed"
        android:paddingLeft="16sp"
        android:paddingStart="16sp"
        android:paddingEnd="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/turnrate_string"/>

    <Button
        android:id="@+id/emergencyStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@android:color/holo_red_dark"
        android:text="@string/stop"
        tools:ignore="RelativeOverlap" />

</RelativeLayout>
