<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.robotca.ControlApp.Views.LaserScanView
        android:id="@+id/laser_scan_renderer_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/recenter_laser_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/center"/>

        <CheckBox style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/lock_camera_checkbox"
            android:text="@string/map_lock_camera_string"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/clear_waypoints_button"
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_clear_string"/>
    </LinearLayout>

</RelativeLayout>